--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
         </ul>
         <p>To exercise any of these rights, please contact us at the email address provided below.</p>
 
+        <!-- NEW SECTION: Data Deletion Request -->
+        <div id="data-deletion" class="highlight-box">
+            <h2>Data Deletion Request</h2>
+            <p>You have the right to request the deletion of your account and all associated data at any time. To do so, please send an email with the subject "Account Deletion Request" to the contact address in section </p>
+            <p><strong>9. Contact Us</strong></p>
+            <p>Please send the request from the email address associated with your ParoBible account to facilitate verification. We will process your request and confirm the deletion of your data within 30 days.</p>
+        </div>
+
         <h2>7. Children's Privacy</h2>
         <p>ParoBible is not intended for use by anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13.</p>
 
@@ -165,6 +173,14 @@
             <li><strong>Le droit à l'effacement :</strong> Vous pouvez nous demander d'effacer vos données personnelles, ce qui entraînera la suppression de votre compte et de tout le contenu associé.</li>
         </ul>
         <p>Pour exercer l'un de ces droits, veuillez nous contacter à l'adresse e-mail fournie ci-dessous.</p>
+
+        <!-- NOUVELLE SECTION : Demande de Suppression de Données -->
+        <div class="highlight-box">
+            <h2>Demande de Suppression de Données</h2>
+            <p>Vous avez le droit de demander à tout moment la suppression de votre compte et de toutes les données associées. Pour ce faire, veuillez envoyer un e-mail ayant pour objet "Demande de Suppression de Compte" à l'adresse indiqée à la section </p>
+            <p><strong>9. Nous Contacter</strong></p>
+            <p>Veuillez envoyer la demande depuis l'adresse e-mail associée à votre compte ParoBible pour faciliter la vérification. Nous traiterons votre demande et confirmerons la suppression de vos données dans un délai de 30 jours.</p>
+        </div>
         
         <h2>7. Confidentialité des Enfants</h2>
         <p>ParoBible n'est pas destiné à être utilisé par des personnes de moins de 13 ans. Nous ne collectons pas sciemment d'informations personnellement identifiables auprès d'enfants de moins de 13 ans.</p>
