--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- SCRIPT TO DEFINE THE EMAIL IN ONE PLACE -->
     <script>
         // *** EDIT THIS LINE TO CHANGE THE EMAIL EVERYWHERE ***
-        const supportEmail = "instilknowledge@gmail.com";
+        const supportEmail = "contact.parobible@gmail.com";
 
         // This function will run once the document is loaded
         document.addEventListener('DOMContentLoaded', function() {
