--- a/Terms-of-Service.html
+++ b/Terms-of-Service.html
@@ -14,12 +14,9 @@
             color: #333;
         }
         .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px 40px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            padding: 15px; 
+            width: 100%;
+            box-sizing: border-box;
         }
         h1, h2, h3 {
             color: #1a1a1a;
