Device Identification for Guest Accounts
Added section for Device Identification for Guest Accounts

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <ul>
             <li><strong>Usage Data:</strong> We collect information about your activity in the app, such as your quiz progress, scores, and settings preferences (e.g., theme, font size, selected Bible version).</li>
             <li><strong>Device Information:</strong> We may collect basic information about your device (e.g., operating system, device type) to help us diagnose bugs and improve compatibility.</li>
+            <li><strong>Device Identification for Guest Accounts:</strong> To provide a seamless experience for guest users, we generate a unique device identifier using a combination of your device's hardware information and a randomly generated code. This identifier is used solely to maintain your guest account session, sync your app preferences and reading progress, and prevent duplicate guest accounts on the same device. We do not use this identifier for advertising, tracking across apps, or sharing with third parties. You can delete your guest account data at any time through the app settings.</li>
         </ul>
         <h3>Information from Third-Party Services:</h3>
         <ul>
@@ -161,6 +162,7 @@
         <ul>
             <li><strong>Données d'utilisation :</strong> Nous collectons des informations sur votre activité dans l'application, telles que votre progression dans les quiz, vos scores et vos préférences de paramètres (par ex., thème, taille de la police, version de la Bible sélectionnée).</li>
             <li><strong>Informations sur l'appareil :</strong> Nous pouvons collecter des informations de base sur votre appareil (par ex., système d'exploitation, type d'appareil) pour nous aider à diagnostiquer les bugs et à améliorer la compatibilité.</li>
+            <li><strong>Identification de l'Appareil pour les Comptes Invités :</strong> Pour offrir une expérience fluide aux utilisateurs invités, nous générons un identifiant unique d'appareil en utilisant une combinaison des informations matérielles de votre appareil et d'un code généré aléatoirement. Cet identifiant est utilisé uniquement pour maintenir votre session de compte invité, synchroniser vos préférences d'application et votre progression de lecture, et empêcher les comptes invités en double sur le même appareil. Nous n'utilisons pas cet identifiant pour la publicité, le suivi entre applications ou le partage avec des tiers. Vous pouvez supprimer les données de votre compte invité à tout moment via les paramètres de l'application.</li>
         </ul>
         <h3>Informations provenant de services tiers :</h3>
         <ul>
