--- a/verify-email-es.html
+++ b/verify-email-es.html
@@ -257,13 +257,7 @@
     <script>
         // ✅ Configuración de Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyBEEWsFIsv2NyS5LZEJn0jMjXCT-XdAbgU",
-            authDomain: "parobible-app.firebaseapp.com",
-            projectId: "parobible-app",
-            storageBucket: "parobible-app.firebasestorage.app",
-            messagingSenderId: "324929509217",
-            appId: "1:324929509217:web:947e574e2ea14365505720",
-            measurementId: "G-GSD4LF0B70"
+            apiKey
         };
 
         // Inicializar Firebase
