--- a/reset-password.html
+++ b/reset-password.html
@@ -434,12 +434,12 @@
 
         // Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyBEEWsFIsv2NyS5LZEJn0jMjXCT-XdAbgU",
+            apiKey: "a-XdAbgU",
             authDomain: "parobible-app.firebaseapp.com",
             projectId: "parobible-app",
             storageBucket: "parobible-app.firebasestorage.app",
-            messagingSenderId: "324929509217",
-            appId: "1:324929509217:web:947e574e2ea14365505720"
+            messagingSenderId: "2",
+            appId: "1:2:web:3E"
         };
 
         firebase.initializeApp(firebaseConfig);
